<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EcuacionesDiferenciales">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ecu_dif"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="391dp"
        android:layout_height="519dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ecuDif1"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/ecuDifIMG1"
                app:srcCompat="@drawable/ecuaciones_diferenciales_001"
                tools:layout_editor_absoluteX="35dp"
                tools:layout_editor_absoluteY="97dp" />

            <ImageView
                android:id="@+id/ecudif2"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/ecuDifIMG2"
                app:srcCompat="@drawable/ecuaciones_diferenciales_002"
                tools:layout_editor_absoluteX="231dp"
                tools:layout_editor_absoluteY="123dp" />

            <ImageView
                android:id="@+id/ecuDif3"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:contentDescription="@string/ecuDifIMG3"
                app:srcCompat="@drawable/ecuaciones_diferenciales_003"
                tools:layout_editor_absoluteX="68dp"
                tools:layout_editor_absoluteY="334dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/volver4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.946" />


</android.support.constraint.ConstraintLayout>