<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trigonometria">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/trigo"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="555dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/formTrigo1"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/trigoIMG1"
                app:srcCompat="@drawable/trigonometria_001"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="102dp" />

            <ImageView
                android:id="@+id/formTrigo2"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:contentDescription="@string/trigoIMG2"
                app:srcCompat="@drawable/trigonometria_002"
                tools:layout_editor_absoluteX="79dp"
                tools:layout_editor_absoluteY="337dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/volver7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974" />
</android.support.constraint.ConstraintLayout>